--- a/src/output.css
+++ b/src/output.css
@@ -574,18 +574,6 @@ video {
   left: 0px;
 }
 
-.right-10 {
-  right: 2.5rem;
-}
-
-.bottom-24 {
-  bottom: 6rem;
-}
-
-.right-\[-100\%\] {
-  right: -100%;
-}
-
 .left-0 {
   left: 0px;
 }
@@ -594,20 +582,12 @@ video {
   right: 0px;
 }
 
-.top-9 {
-  top: 2.25rem;
-}
-
 .top-20 {
   top: 5rem;
 }
 
-.top-0 {
-  top: 0px;
-}
-
-.top-2 {
-  top: 0.5rem;
+.right-\[-100\%\] {
+  right: -100%;
 }
 
 .top-\[-45vh\] {
@@ -616,6 +596,14 @@ video {
 
 .right-\[-3vw\] {
   right: -3vw;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
+.bottom-24 {
+  bottom: 6rem;
 }
 
 .z-10 {
@@ -634,19 +622,6 @@ video {
   margin: auto;
 }
 
-.m-0 {
-  margin: 0px;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -663,18 +638,6 @@ video {
   height: 100vh;
 }
 
-.h-80 {
-  height: 20rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
 .h-fit {
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -689,20 +652,46 @@ video {
   height: 1.5rem;
 }
 
-.w-96 {
-  width: 24rem;
+.h-80 {
+  height: 20rem;
+}
+
+.w-fit {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .w-80 {
   width: 20rem;
 }
 
-.w-32 {
-  width: 8rem;
-}
-
 .w-full {
   width: 100%;
+}
+
+.w-\[1200px\] {
+  width: 1200px;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-32 {
+  width: 8rem;
 }
 
 .w-48 {
@@ -719,40 +708,6 @@ video {
 
 .w-20 {
   width: 5rem;
-}
-
-.w-\[600px\] {
-  width: 600px;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-\[1200px\] {
-  width: 1200px;
-}
-
-.w-60 {
-  width: 15rem;
-}
-
-.w-fit {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.w-screen {
-  width: 100vw;
-}
-
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-6 {
-  width: 1.5rem;
 }
 
 .transform {
@@ -787,10 +742,6 @@ video {
   align-items: center;
 }
 
-.justify-end {
-  justify-content: flex-end;
-}
-
 .justify-center {
   justify-content: center;
 }
@@ -799,12 +750,12 @@ video {
   justify-content: space-between;
 }
 
-.gap-12 {
-  gap: 3rem;
-}
-
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-12 {
+  gap: 3rem;
 }
 
 .overflow-hidden {
@@ -813,26 +764,6 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-l-lg {
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-}
-
-.rounded-r-lg {
-  border-top-right-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-emerald-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(6 95 70 / var(--tw-bg-opacity));
 }
 
 .bg-slate-900 {
@@ -845,54 +776,39 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-\[rgba\(0\2c 0\2c 0\2c \.7\)\] {
-  background-color: rgba(0,0,0,.7);
-}
-
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'\/src\/img\/map\.png\'\)\] {
-  background-image: url('/src/img/map.png');
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'https\:\/\/travelsystem\.uz\/wp-content\/uploads\/2021\/06\/issikul-1\.jpg\'\)\] {
-  background-image: url('https://travelsystem.uz/wp-content/uploads/2021/06/issikul-1.jpg');
+.bg-\[rgba\(0\2c 0\2c 0\2c \.7\)\] {
+  background-color: rgba(0,0,0,.7);
 }
 
-.bg-\[url\(\'https\:\/\/pibig\.info\/uploads\/posts\/2021-06\/1624422239_33-pibig_info-p-issikulskoe-ozero-kirgiziya-priroda-krasiv-33\.jpg\'\)\] {
-  background-image: url('https://pibig.info/uploads/posts/2021-06/1624422239_33-pibig_info-p-issikulskoe-ozero-kirgiziya-priroda-krasiv-33.jpg');
+.bg-emerald-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 95 70 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'\/src\/img\/bg\.jpeg\'\)\] {
-  background-image: url('/src/img/bg.jpeg');
+.bg-\[url\(\'\/road-map-win-travel\/src\/img\/bg\.jpeg\'\)\] {
+  background-image: url('/road-map-win-travel/src/img/bg.jpeg');
+}
+
+.bg-\[url\(\'\/road-map-win-travel\/src\/img\/MG_6093-94\.jpg\'\)\] {
+  background-image: url('/road-map-win-travel/src/img/MG_6093-94.jpg');
 }
 
 .bg-\[url\(\'https\:\/\/www\.airpano\.ru\/photogallery\/images_1550\/324_999448\.jpg\'\)\] {
   background-image: url('https://www.airpano.ru/photogallery/images_1550/324_999448.jpg');
 }
 
-.bg-\[url\(\'\/src\/img\/\'\)\] {
-  background-image: url('/src/img/');
-}
-
-.bg-\[url\(\'\/src\/img\/_MG_6093-94\.jpg\'\)\] {
-  background-image: url('/src/img/_MG_6093-94.jpg');
-}
-
 .bg-cover {
   background-size: cover;
-}
-
-.bg-contain {
-  background-size: contain;
 }
 
 .bg-fixed {
@@ -907,6 +823,10 @@ video {
   background-repeat: no-repeat;
 }
 
+.p-20 {
+  padding: 5rem;
+}
+
 .p-4 {
   padding: 1rem;
 }
@@ -919,20 +839,8 @@ video {
   padding: 1.25rem;
 }
 
-.p-40 {
-  padding: 10rem;
-}
-
-.p-20 {
-  padding: 5rem;
-}
-
 .pt-10 {
   padding-top: 2.5rem;
-}
-
-.text-center {
-  text-align: center;
 }
 
 .text-3xl {
@@ -945,31 +853,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-slate-300 {
-  --tw-text-opacity: 1;
-  color: rgb(203 213 225 / var(--tw-text-opacity));
-}
-
-.opacity-50 {
-  opacity: 0.5;
-}
-
 .opacity-25 {
   opacity: 0.25;
-}
-
-.opacity-70 {
-  opacity: 0.7;
-}
-
-.drop-shadow-lg {
-  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.drop-shadow-xl {
-  --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition {
