--- a/src/output.css
+++ b/src/output.css
@@ -598,10 +598,6 @@ video {
   right: -3vw;
 }
 
-.right-\[-100\%\] {
-  right: -100%;
-}
-
 .right-10 {
   right: 2.5rem;
 }
@@ -656,14 +652,6 @@ video {
   height: 1.5rem;
 }
 
-.h-80 {
-  height: 20rem;
-}
-
-.h-28 {
-  height: 7rem;
-}
-
 .h-40 {
   height: 10rem;
 }
@@ -694,36 +682,12 @@ video {
   width: 1.5rem;
 }
 
-.w-\[1200px\] {
-  width: 1200px;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.w-48 {
-  width: 12rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
 .w-40 {
   width: 10rem;
 }
 
 .w-20 {
   width: 5rem;
-}
-
-.w-28 {
-  width: 7rem;
 }
 
 .transform {
@@ -738,20 +702,12 @@ video {
   resize: both;
 }
 
-.flex-row-reverse {
-  flex-direction: row-reverse;
-}
-
 .flex-col {
   flex-direction: column;
 }
 
 .flex-wrap {
   flex-wrap: wrap;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -811,48 +767,16 @@ video {
   background-color: rgb(6 95 70 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'\/src\/img\/bg\.jpeg\'\)\] {
-  background-image: url('/src/img/bg.jpeg');
+.bg-\[url\(\'\/road-map-win-travel\/src\/img\/title-bg\.webp\'\)\] {
+  background-image: url('/road-map-win-travel/src/img/title-bg.webp');
 }
 
-.bg-\[url\(\'\/src\/img\/_MG_6093-94\.jpg\'\)\] {
-  background-image: url('/src/img/_MG_6093-94.jpg');
+.bg-\[url\(\'\/road-map-win-travel\/src\/img\/mountain-bg\.webp\'\)\] {
+  background-image: url('/road-map-win-travel/src/img/mountain-bg.webp');
 }
 
-.bg-\[url\(\'https\:\/\/www\.airpano\.ru\/photogallery\/images_1550\/324_999448\.jpg\'\)\] {
-  background-image: url('https://www.airpano.ru/photogallery/images_1550/324_999448.jpg');
-}
-
-.bg-\[url\(\'src\/img\/lake_bg\.jpeg\'\)\] {
-  background-image: url('src/img/lake_bg.jpeg');
-}
-
-.bg-\[url\(\'\/src\/img\/lake_bg\.jpeg\'\)\] {
-  background-image: url('/src/img/lake_bg.jpeg');
-}
-
-.bg-\[url\(\'\/src\/img\/title-bg\.jpeg\'\)\] {
-  background-image: url('/src/img/title-bg.jpeg');
-}
-
-.bg-\[url\(\'\/src\/img\/mountain-bg\'\)\] {
-  background-image: url('/src/img/mountain-bg');
-}
-
-.bg-\[url\(\'\/src\/img\/mountain-bg\.jpg\'\)\] {
-  background-image: url('/src/img/mountain-bg.jpg');
-}
-
-.bg-\[url\(\'\/src\/img\/title-bg\.webp\'\)\] {
-  background-image: url('/src/img/title-bg.webp');
-}
-
-.bg-\[url\(\'\/src\/img\/mountain-bg\.webp\'\)\] {
-  background-image: url('/src/img/mountain-bg.webp');
-}
-
-.bg-\[url\(\'\/src\/img\/lake_bg\.webp\'\)\] {
-  background-image: url('/src/img/lake_bg.webp');
+.bg-\[url\(\'\/road-map-win-travel\/src\/img\/lake_bg\.webp\'\)\] {
+  background-image: url('/road-map-win-travel/src/img/lake_bg.webp');
 }
 
 .bg-cover {
@@ -879,14 +803,6 @@ video {
   padding: 0.75rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
-.p-20 {
-  padding: 5rem;
-}
-
 .p-12 {
   padding: 3rem;
 }
@@ -899,41 +815,18 @@ video {
   text-align: right;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.font-semibold {
-  font-weight: 600;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
   font-weight: 700;
-}
-
-.leading-5 {
-  line-height: 1.25rem;
 }
 
 .text-white {
@@ -959,14 +852,14 @@ video {
     line-height: 2.25rem;
   }
 
-  .sm\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
   .sm\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
@@ -979,27 +872,18 @@ video {
     width: 80%;
   }
 
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
   .md\:w-80 {
     width: 20rem;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .md\:text-3xl {
@@ -1028,10 +912,6 @@ video {
     height: 90%;
   }
 
-  .lg\:h-80 {
-    height: 20rem;
-  }
-
   .lg\:w-80 {
     width: 20rem;
   }
@@ -1042,10 +922,6 @@ video {
 
   .lg\:w-\[90\%\] {
     width: 90%;
-  }
-
-  .lg\:w-\[80\%\] {
-    width: 80%;
   }
 
   .lg\:w-fit {
@@ -1076,10 +952,6 @@ video {
 
   .lg\:flex-row-reverse {
     flex-direction: row-reverse;
-  }
-
-  .lg\:flex-col {
-    flex-direction: column;
   }
 
   .lg\:items-start {
